# PyTorchCML

./: .gitignore  .travis.yml  LICENSE  README.md  README_ja.md  build.sh  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: python-publish.yml  python-test.yml
PyTorchCML/adaptors/: BaseAdaptor.py  MLPAdaptor.py  __init__.py
PyTorchCML/evaluators/: BaseEvaluator.py  UserwiseEvaluator.py  __init__.py
PyTorchCML/losses/: BaseLoss.py  BasePairwiseLoss.py  LogitPairwiseLoss.py  MSEPairwiseLoss.py  MinTripletLoss.py  RelevancePairwiseLoss.py  SumTripletLoss.py  __init__.py
PyTorchCML/models/: BaseEmbeddingModel.py  CollaborativeMetricLearning.py  MatrixFactorization.py  __init__.py
PyTorchCML/regularizers/: GlobalOrthogonalRegularizer.py  __init__.py
PyTorchCML/samplers/: BaseSampler.py
PyTorchCML/trainers/: BaseTrainer.py  __init__.py
PytorchCML/losses/: RelevancePairwiseLoss.py
PytorchCML/regularizers/: BaseRegularizer.py  L2Regularizer.py
PytorchCML/samplers/: TwoStageSampler.py  __init__.py
PytorchCML/trainers/: MFTrainer.py  __init__.py
examples/notebooks/: movielens_cml.ipynb  movielens_mf.ipynb  naive_cml.ipynb
tests/: __init__.py  _path.py
tests/adaptors/: test_MLPAdaptor.py
tests/evaluators/: test_UserwiseEvaluator.py
tests/losses/: test_LogitPairwiseLoss.py  test_MSEPairwiseLoss.py  test_MinTripletLoss.py  test_RelevancePairwiseLoss.py  test_SumTripletLoss.py
tests/models/: test_CollaborativeMetricLearning.py  test_MatrixFactorization.py
tests/regularizers/: test_L2Regularizer.py  (+1 more)
(+31 files in other folders)
