[tool.poetry]
name = "PyTorchCML"
version = "0.0.0"
description = "Collaborative Metric Learning implemented by PyTorch"
authors = ["hand10ryo <hand10ryo@yahoo.co.jp>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/hand10ryo/PyTorchCML"
repository = "https://github.com/hand10ryo/PyTorchCML"
packages = [
    { include = "PyTorchCML" }
]

[tool.poetry-dynamic-versioning]
enable = true
style = "pep440"

[tool.poetry.dependencies]
python = ">=3.7.10,<3.10"
torch = "^1.8.1"
scikit-learn = "^0.22.2"
scipy = "^1.4.1"
numpy = "^1.19.5"
pandas = "^1.1.5"
tqdm = "^4.41.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.1"
autopep8 = "^1.5.6"
black = "^21.4b2"
isort = "^5.8.0"
mypy = "^0.812"
ipykernel = "^5.5.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
